--- a/khaibaoyte/public/index.html
+++ b/khaibaoyte/public/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.8.4/umd/react.production.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.8.4/umd/react-dom.production.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/4.8.0/reactstrap.min.js"></script>
-  <title>Khai báo y tế</title>
+  <title>Khai báo y tế doanh nghiệp</title>
 </head>
 
 <body>
